# cot-agent-system

./: README.md  USAGE.md  pyproject.toml  requirements.txt  run.py  setup.sh  test_interactive.py
examples/: __init__.py  basic_usage.py  config_examples.py
src/cot_agent_system/: __init__.py  agent.py  cli.py  cot_engine.py  interactive_feedback.py  models.py  todo_executor.py  todo_manager.py
tests/: __init__.py  test_models.py  test_todo_manager.py
